[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
rand = "0.8.5"
log = "0.4"
lazy_static = "1.4.0"
loki_spec = {path = "../loki_spec"}
serde_json = "1.0"
sha3 = "0.10.1"
sm3 = "0.4.1"
hex = "0.4.3"
integer-encoding = "3.0.3"
secp256k1 = "0.22.1"